# aruba-ai-workshop

./: .gitignore  .pre-commit-config.yaml  Activity00.ipynb  Activity01.ipynb  Activity02.ipynb  Activity03.ipynb  Activity04.ipynb  Activity05.ipynb  Activity21.ipynb  Activity22.ipynb  Dockerfile  README.md  build-image.sh  build.sh  environment.yml  lowest_cpu.py  pyproject.toml  requirements.txt
data/switches/: README.txt
entrypoint/: entrypoint.sh  start-labs.sh
scripts/: build-image.sh  cleanup.sh  gen_jupyter_auth.py  gpu_test.py  reset_output.sh  start-lab.sh  test-bg.py  update_requirements.sh
tests/: test_labtest.py
