[tool.poetry]
name = "labtest"
version = "0.1.0"
description = ""
authors = ["Michael Rose Jr. <michael.rose@hpe.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter-server = "<2.0.0"
jupyterlab = "3.6+"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
numpy = "^1.25.1"
matplotlib = "^3.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
