[tool.poetry]
name = "labtest"
version = "0.1.0"
description = ""
authors = ["Michael Rose Jr. <michael.rose@hpe.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter-server = "2.7.3"
jupyterlab = "4.0.6"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
numpy = "1.23.5"
matplotlib = "^3.7.2"
tensorflow = ">=2.12.0"
nbstripout = "^0.6.1"
pre-commit = "^3.3.3"
pydotplus = "^2.0.2"
opencv-python = "^4.8.0"
notebook = "^7.0.4"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
